--- a/style.css
+++ b/style.css
@@ -82,7 +82,42 @@ header{
 }
 /*end of banner*/
 
-
+/*mission*/
+.mission{
+    background: #151f20;
+}
+.underline{
+    width: 150px;
+    border: 3px solid #eee;
+    margin: auto;
+}
+.fromLeft{
+    animation: fromLeft 3s;
+}
+.fromRight{
+    animation: fromRight 3s;
+}
+@keyframes fromLeft{
+    0%{
+        transform: translateX(-120px);
+        opacity: 0;
+    }
+    1000%{
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+@keyframes fromRight{
+    0%{
+        transform: translateX(30px);
+        opacity: 0;
+    }
+    1000%{
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+/*end of mission*/
 
 
 
