gallery section completed

--- a/style.css
+++ b/style.css
@@ -140,8 +140,21 @@ header{
 }
 /*end of collection*/
 
-
-
+/*gallery*/
+.underline-dark{
+    width: 150px;
+    border: 3px solid #888;
+    margin: auto;
+}
+.gallery-list-item{
+    color: #777;
+    cursor: pointer;
+    user-select: none;
+}
+.active-item{
+    color: #70aed2;
+}
+/*end of gallery*/
 
 
 
