customers/testimonials section completed

--- a/style.css
+++ b/style.css
@@ -156,6 +156,19 @@ header{
 }
 /*end of gallery*/
 
+/*customers*/
+.customers{
+    background: #151f20;
+}
+/*end of customers*/
+
+/*pricing*/
+
+/*end of pricing*/
+
+/*contact*/
+
+/*end of contact*/
 
 
 
